# diffusiongym

./: .coveragerc  .gitignore  README.md  pyproject.toml
.github/workflows/: docs.yml  release.yml
diffusiongym/: __init__.py  make.py  registry.py  types.py  utils.py
diffusiongym/base_models/: base.py  one_dim_gmm.py
diffusiongym/environments/: base.py  endpoint.py  epsilon.py  score.py  velocity.py
diffusiongym/images/: __init__.py
diffusiongym/images/base_models/: cifar.py  dit.py  refl_data.json  stable_diffusion.py
diffusiongym/images/rewards/: __init__.py  aesthetic.py  compression.py
diffusiongym/molecules/: __init__.py  flowmol.py  types.py
diffusiongym/molecules/rewards/: __init__.py  qed.py  utils.py  validity.py  xtb.py
diffusiongym/rewards/: __init__.py  base.py  one_dim.py
diffusiongym/schedulers/: base.py  noise_schedules.py  schedulers.py
docs/: api.md  api.rst  conf.py  defining_your_own.md  get_started.md  index.md  index.rst  math.rst  policies.rst  quickstart.rst  registries.rst  stable_diffusion.rst
docs/_templates/: class.rst
docs/api/: base_models.rst  environments.rst  images.rst  molecules.rst  rewards.rst  schedulers.rst  types.rst
docs/changelog/: index.rst
docs/changelog/includes/: 1.11.rst  1.6.rst  2.0.0.rst  2.0.1.rst  2.0.rst
flow_gym/: __init__.py  make.py  registry.py  types.py  utils.py
flow_gym/base_models/: __init__.py  base.py  cifar.py  one_dim_gmm.py
flow_gym/environments/: __init__.py  base.py  endpoint.py  epsilon.py  score.py  velocity.py
flow_gym/images/: __init__.py
flow_gym/images/base_models/: cifar.py  stable_diffusion.py
flow_gym/images/rewards/: compression.py
flow_gym/methods/: __init__.py  value_matching.py
flow_gym/molecules/: __init__.py  types.py
flow_gym/molecules/base_models/: flowmol.py  flowmol_model.py
flow_gym/molecules/rewards/: base.py  dipole_moment.py  protein_docking.py  utils.py  validity.py
flow_gym/rewards/: __init__.py  base.py  compression.py  one_dim.py  one_dim_binary.py
flow_gym/schedulers/: __init__.py  base.py  noise_schedules.py  schedulers.py
flowgym/: __init__.py  make.py  types.py  utils.py
flowgym/base_models/: base.py  one_dim_gmm.py
flowgym/environments/: base.py  endpoint.py  epsilon.py  score.py  velocity.py
flowgym/images/: __init__.py
flowgym/images/base_models/: cifar.py  dit.py  stable_diffusion.py
flowgym/images/rewards/: aesthetic.py  compression.py  image_reward.py
flowgym/molecules/: __init__.py  types.py
flowgym/molecules/base_models/: flowmol_model.py  qm9_dipole_moments.json
flowgym/molecules/rewards/: base.py  qed.py  validity.py  xtb.py
flowgym/rewards/: base.py  one_dim.py
flowgym/schedulers/: schedulers.py
tests/: __init__.py  test_stub.py
value_matching/: implementation.py
