[project]
name = "flow_gym"
description = "Flow Gym"
license = {file = "LICENSE"}
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "Cristian Perez Jensen"}]
requires-python = ">=3.8,<3.13"

[project.optional-dependencies]
images = [
    "diffusers>=0.21.0,<0.34",
    "accelerate",
]
molecules = [
    "rdkit",
    "dgl",
    "flowmol @ git+https://github.com/Dunni3/FlowMol.git@418a3e5",
]
all = [
    "flow_gym[molecules]",
    "flow_gym[images]",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
pytorch = { version = ">=2.1,<2.5" }
torchvision = { version = ">=0.18.1" }
tqdm = "*"
types-tqdm = ">=4.67.0.20250809,<5"
typing-extensions = "*"

[tool.pixi.pypi-dependencies]
flow_gym = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}
molecules = { features = ["dev", "molecules"], solve-group = "default"}
images = { features = ["dev", "images"], solve-group = "default"}
full = { features = ["dev", "full"], solve-group = "default"}

[tool.pixi.feature.molecules.pypi-dependencies]
flow_gym = { path = ".", editable = true, extras = ["molecules"] }

[tool.pixi.feature.images.pypi-dependencies]
flow_gym = { path = ".", editable = true, extras = ["images"] }

[tool.pixi.feature.full.pypi-dependencies]
flow_gym = { path = ".", editable = true, extras = ["all"] }

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }
docs = "sphinx-build -b html docs docs/_build"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
mypy = ">=1.15"
pre-commit = ">=4.2"
sphinx = ">=8.2.3,<9"
furo = ">=2024.8.6,<2025"
sphinx-autobuild = ">=2024.10.3,<2025"
myst-parser = ">=4.0.1,<5"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "D105", # Docstring in dunder methods
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["flow_gym", "tests"]
strict = true
pretty = true
[[tool.mypy.overrides]]
module = [
    "torchvision",
    "torchvision.*",
    "dgl",
    "dgl.*",
    "rdkit",
    "rdkit.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "flow_gym"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
