[project]
name = "flow_gym"
description = "Flow Gym"
license = {file = "LICENSE"}
version = "0.0.1"
readme = "README.md"
keywords = []
authors = [{name = "Cristian Perez Jensen"}]
requires-python = ">=3.8,<3.12"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
tqdm = "*"
types-tqdm = ">=4.67.0.20250809,<5"
typing-extensions = "*"

[tool.pixi.pypi-options]
extra-index-urls = ["https://download.pytorch.org/whl/cu121"]
find-links = [
    { url = "https://data.dgl.ai/wheels/torch-2.3/cu121/repo.html" },
    { url = "https://data.pyg.org/whl/torch-2.3.1+cu121.html" }
]

[tool.pixi.pypi-dependencies]
torch = { version = "==2.3.1", index = "https://download.pytorch.org/whl/cu121" }
torchvision = { version = "==0.18.1", index = "https://download.pytorch.org/whl/cu121" }
flow_gym = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
molecules = { features = ["molecules"], solve-group = "default"}
images = { features = ["images"], solve-group = "default"}
dev = { features = ["dev"], solve-group = "default"}
full = { features = ["dev", "molecules", "images"], solve-group = "default"}

[tool.pixi.feature.molecules.dependencies]
rdkit = "==2023.9.4"

[tool.pixi.feature.molecules.pypi-dependencies]
dgl = { version = "==2.4.0" }
flowmol = { git = "https://github.com/cristianpjensen/FlowMol.git", rev = "5b56ffb285887bdf0bfaab5a2ec76e74d851ee03" }
torch-scatter = ">=2.1.2"
torch-cluster = ">=1.6.3"
pytorch-lightning = ">=2.0.0"
useful_rdkit_utils = "==0.80"
py3Dmol = "*"
einops = "*"
wandb = "*"

[tool.pixi.feature.molecules.activation]
env = { DGLBACKEND = "pytorch" }

[tool.pixi.feature.images.pypi-dependencies]
diffusers = "==0.33.1"
accelerate = "*"

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy" }
test = { cmd="pytest" }
all = { depends-on = ["fmt", "lint", "types", "test"] }
docs = "sphinx-build -b html docs docs/_build"

[tool.pixi.feature.dev.dependencies]
pytest = ">=8.3"
pytest-cov = ">=6.0"
ruff = ">=0.11"
mypy = ">=1.15"
pre-commit = ">=4.2"
sphinx = ">=8.2.3,<9"
furo = ">=2024.8.6,<2025"
sphinx-autobuild = ">=2024.10.3,<2025"
myst-parser = ">=4.0.1,<5"
ipykernel = ">=6.30.1,<7"
pip = ">=25.2,<26"

[tool.pixi.feature.dev.pypi-dependencies]
rdkit-stubs = "*"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N806", # Non-lowercase variable in function
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "D105", # Docstring in dunder methods
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
files = ["flow_gym", "tests"]
strict = true
pretty = true
[[tool.mypy.overrides]]
module = [
    "torchvision",
    "torchvision.*",
    "dgl",
    "dgl.*",
    "rdkit",
    "rdkit.*",
    "flowmol",
    "flowmol.*",
    "torch_scatter",
    "torch_scatter.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests", "flow_gym"]
addopts = "--doctest-modules"
doctest_optionflags = "NORMALIZE_WHITESPACE"
filterwarnings = [
    "ignore:Can't initialize NVML:UserWarning:torch.cuda",
    "ignore:invalid escape sequence:DeprecationWarning:dgl.backend.backend",
    "ignore::DeprecationWarning:rdkit",
    "ignore::DeprecationWarning:torchmetrics.utilities.imports",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
